# xlm-ens

./: Cargo.toml  README.md  update_client.js  update_client.py  update_main.js
cli/: Cargo.toml
cli/src/: config.rs  main.rs
cli/src/commands/: auction.rs  mod.rs  register.rs  renew.rs  resolve.rs  transfer.rs
contracts/auction/: Cargo.toml
contracts/auction/src/: bid.rs  lib.rs  test.rs
contracts/bridge/: Cargo.toml
contracts/bridge/src/: axelar.rs  lib.rs  test.rs
contracts/nft/: Cargo.toml
contracts/nft/src/: lib.rs  mint.rs  test.rs
contracts/registrar/: Cargo.toml
contracts/registrar/src/: lib.rs  test.rs
contracts/registrar/test_snapshots/test/tests/: renew_fails_for_claimable_registration.1.json  renew_succeeds_at_grace_period_boundary.1.json
contracts/registry/: Cargo.toml
contracts/registry/src/: errors.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/resolver/: Cargo.toml
contracts/resolver/src/: lib.rs  test.rs
contracts/subdomain/: Cargo.toml
contracts/subdomain/src/: lib.rs  test.rs  threat-model.md
scripts/deploy/: mainnet.sh  testnet.sh
scripts/invoke/: register.sh  resolve.sh
scripts/setup/: fund_accounts.sh
tests/: Cargo.toml
tests/fixtures/: accounts.json
tests/integration/: auction_test.rs  bridge_test.rs  registrar_test.rs  registry_test.rs  subdomain_test.rs
