[workspace]
members = [
    "contracts/registry",
    "contracts/resolver",
    "contracts/registrar",
    "contracts/auction",
    "contracts/subdomain",
    "contracts/nft",
    "contracts/bridge",
    "packages/xlm-ns-sdk",
    "packages/xlm-ns-common",
    "cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["ik"]
repository = "https://example.com/xlm-ns"

[workspace.dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
